--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
 requests==2.26.0
+ruff==0.11.12
 tinydb==4.5.2
 urllib3==1.26.7
 wcwidth==0.2.5
